# url-shortener

./: .env.example  .gitignore  LICENSE  README.MD  docker-compose.yml  task.todo
url-shortener-backend/: DockerFile  Dockerfile  README.md  pyproject.toml
url-shortener-backend/app/: api.py  main.py  redis.py
url-shortener-backend/app/core/: config.py
url-shortener-backend/app/services/: limiter.py  shortener.py
url-shortener-backend/app/tests/: test_api.py  test_limiter.py  test_shortener.py
url-shorterner-frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
url-shorterner-frontend/src/: App.tsx
